--- a/index.html
+++ b/index.html
@@ -21,79 +21,93 @@
     <title>Salty Landing Page</title>
   </head>
   <body>
-    <header class="header--primary">
-      <img src="./images/Logo.png" alt="Salty logo" class="logo" />
-      <nav class="nav--primary">
-        <ul role="list" class="nav--primary__nav-list">
-          <li><a href="#" class="nav-item">Home</a></li>
-          <li><a href="#" class="nav-item">About us</a></li>
-          <li><a href="#" class="nav-item">Destinations</a></li>
-          <li><a href="#" class="nav-item">Tours</a></li>
-          <li><a href="#" class="nav-item">Blog</a></li>
-        </ul>
-        <button class="btn btn__red">
-          Book Now
-          <img src="./images/Vector mail.png" alt="Book Now" />
-        </button>
-      </nav>
-    </header>
+      <header class="header-primary">
+
+              <div class="container">
+                  <div class="header__wrapper--main">
+                      <div class="header__wrapper--secondary">
+                          <img src="./images/Logo.png" alt="Salty logo" class="header__logo" />
+                      <nav class="nav--header">
+                          <ul role="list" class="nav--header__nav-list">
+                            <li><a href="#" class="nav-item">Home</a></li>
+                            <li><a href="#" class="nav-item">About us</a></li>
+                            <li><a href="#" class="nav-item">Destinations</a></li>
+                            <li><a href="#" class="nav-item">Tours</a></li>
+                            <li><a href="#" class="nav-item">Blog</a></li>
+                          </ul>
+                        </div>
+                    </nav>
+                    <button class="btn--red">
+                        <a href="#">
+                            Book Now </a>
+                            <img src="./images/Vectormail.svg" alt="Book Now" />
+                          </button>
+                  </div>
+              </div>
+        </header>
 
     <main>
-      <section class="top-destination">
-        <article class="intro">
-          <h1 class="heading__primary">Top Destinations</h1>
-          <p>Sost Brilliant reasons Entrada should be your one-stop-shop!</p>
-          <button class="btn__white btn__black-fill">London</button>
-          <button class="btn__white">Bangkok</button>
-          <button class="btn__white">England</button>
-          <button class="btn__white">Singapore</button>
-          <button class="btn__white">Italy</button>
-        </article>
-
-        <!-- ! GRID -->
-      </section>
+      <div class="container">
+        <section class="top-destination">
+          <article class="intro">
+            <h1 class="heading--primary">Top Destinations</h1>
+            <p>Sost Brilliant reasons Entrada should be your one-stop-shop!</p>
+            <button class="btn btn__white btn__black-fill">
+              <a href="">London</a>
+            </button>
+            <button class="btn btn__white"><a href="#">Bangkok</a></button>
+            <button class="btn btn__white"><a href="#">England</a></button>
+            <button class="btn btn__white"><a href="#">Singapore</a></button>
+            <button class="btn btn__white"><a href="#">Italy</a></button>
+          </article>
+          <!-- ! GRID -->
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
-      <img src="./images/Logo.png" alt="" class="logo__footer" />
-      <p>Enjoy the touring with Salty</p>
-
-      <nav class="nav--footer">
-        <div class="nav--footer__block">
-          <h2 class="heading--secondary">Resources</h2>
-          <ul class="nav--footer__resources footer--list">
-            <li class="nav--footer__item"><a href="#">Download</a></li>
-            <li class="nav--footer__item"><a href="#">Help Center</a></li>
-            <li class="nav--footer__item"><a href="#">Guide Book</a></li>
-            <li class="nav--footer__item"><a href="#">App Directory</a></li>
-          </ul>
+      <div class="container">
+        <div class="grid-template--4col">
+            <img src="./images/Logo.png" alt="" class="footer__logo" />
+            <p>Enjoy the touring with Salty</p>
+            <nav class="nav--footer">
+              <div class="nav--footer__block">
+                <h2 class="heading--secondary">Resources</h2>
+                <ul role="list" class="footer--list">
+                  <li class="nav--footer__item"><a href="#">Download</a></li>
+                  <li class="nav--footer__item"><a href="#">Help Center</a></li>
+                  <li class="nav--footer__item"><a href="#">Guide Book</a></li>
+                  <li class="nav--footer__item"><a href="#">App Directory</a></li>
+                </ul>
+              </div>
+              <div class="nav--footer__block">
+                <h2 class="heading--secondary">Travellers</h2>
+                <ul role="list" class=" footer--list">
+                  <li><a href="#">Why Travellers</a></li>
+                  <li><a href="#">Enterprice</a></li>
+                  <li><a href="#">Customer Stories</a></li>
+                  <li><a href="#">Company</a></li>
+                </ul>
+              </div>
+              <div class="nav--footer__block">
+                <h2 class="heading--secondary">Company</h2>
+                <ul role="list" class=" footer--list">
+                  <li><a href="#">Travelling</a></li>
+                  <li><a href="#">About Locato</a></li>
+                  <li><a href="#">Success</a></li>
+                  <li><a href="#">Information</a></li>
+                </ul>
+              </div>
+              <div class="nav--footer__block">
+                <h2 class="heading--secondary">Get app</h2>
+                <ul role="list" class=" footer--list">
+                  <li><a href="#">App Store</a></li>
+                  <li><a href="#">Google Play Store</a></li>
+                </ul>
+              </div>
         </div>
-        <div class="nav--footer__block">
-          <h2 class="heading--secondary">Travellers</h2>
-          <ul class="nav--footer__travellers footer--list">
-            <li><a href="#">Why Travellers</a></li>
-            <li><a href="#">Enterprice</a></li>
-            <li><a href="#">Customer Stories</a></li>
-            <li><a href="#">Company</a></li>
-          </ul>
-        </div>
-        <div class="nav--footer__block">
-          <h2 class="heading--secondary">Company</h2>
-          <ul class="nav--footer__travellers footer--list">
-            <li><a href="#">Travelling</a></li>
-            <li><a href="#">About Locato</a></li>
-            <li><a href="#">Success</a></li>
-            <li><a href="#">Information</a></li>
-          </ul>
-        </div>
-        <div class="nav--footer__block">
-          <h2 class="heading--secondary">Get app</h2>
-          <ul class="nav--footer__travellers footer--list">
-            <li><a href="#">App Store</a></li>
-            <li><a href="#">Google Play Store</a></li>
-          </ul>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </footer>
   </body>
 </html>
