--- a/index.html
+++ b/index.html
@@ -40,72 +40,122 @@
                     <button class="btn--red">
                         <a href="#">
                             Book Now </a>
-                            <img src="./images/Vectormail.svg" alt="Book Now" />
+                            <img class="send"src="./images/Vectormail.svg" alt="Book Now" />
                           </button>
                   </div>
               </div>
         </header>
 
     <main>
-      <div class="container">
-        <section class="top-destination">
+        <section class="destinations">
+            <div class="container">
           <article class="intro">
             <h1 class="heading--primary">Top Destinations</h1>
-            <p>Sost Brilliant reasons Entrada should be your one-stop-shop!</p>
-            <button class="btn btn__white btn__black-fill">
-              <a href="">London</a>
-            </button>
-            <button class="btn btn__white"><a href="#">Bangkok</a></button>
-            <button class="btn btn__white"><a href="#">England</a></button>
-            <button class="btn btn__white"><a href="#">Singapore</a></button>
-            <button class="btn btn__white"><a href="#">Italy</a></button>
+            <p class="destinations__text">Sost Brilliant reasons Entrada should be your one-stop-shop!</p>
+            <div class="btn__wrapper">
+                <button class="btn btn--white btn--black-fill">
+                  <a href="">London</a>
+                </button>
+                <button class="btn btn--white"><a href="#">Bangkok</a></button>
+                <button class="btn btn--white"><a href="#">England</a></button>
+                <button class="btn btn--white"><a href="#">Singapore</a></button>
+                <button class="btn btn--white"><a href="#">Italy</a></button>
+            </div>
           </article>
-          <!-- ! GRID -->
+          <article class="destinations__imgs">
+            <div class="destinations__img--grid">
+  <div class="area--1"><img src="./images/1.png" alt="" class=" destinations__img img1"> <div class="destinations__img__inside">
+    <p class="score">3.5</p>
+    <div class="inside__text-box">
+        <p class="inside__text--primary">Vietnam</p>
+        <p class="inside__text--secondary">Worefall</p>
+    </div>
+  </div></div>
+  <div class="area--2"><img src="./images/2.png" alt="" class=" destinations__img img2"> <div class="destinations__img__inside">
+    <p class="score">3.5</p>
+    <div class="inside__text-box">
+        <p class="inside__text--primary">Vietnam</p>
+        <p class="inside__text--secondary">Worefall</p>
+    </div>
+  </div></div>
+  <div class="area--3"><img src="./images/3.png" alt="" class=" destinations__img img3"> <div class="destinations__img__inside">
+    <p class="score">3.5</p>
+    <div class="inside__text-box">
+        <p class="inside__text--primary">Vietnam</p>
+        <p class="inside__text--secondary">Worefall</p>
+    </div>
+  </div></div>
+  <div class="area--4"><img src="./images/4.png" alt="" class=" destinations__img img4"> <div class="destinations__img__inside">
+    <p class="score">3.5</p>
+    <div class="inside__text-box">
+        <p class="inside__text--primary">Vietnam</p>
+        <p class="inside__text--secondary">Worefall</p>
+    </div>
+  </div></div>
+  <div class="area--5"><img src="images/5.png" alt="" class=" destinations__img img5"> <div class="destinations__img__inside">
+    <p class="score">3.5</p>
+    <div class="inside__text-box">
+        <p class="inside__text--primary">Vietnam</p>
+        <p class="inside__text--secondary">Worefall</p>
+    </div>
+  </div></div>
+  <div class="area--6"><img src="./images/6.png" alt="" class=" destinations__img img6"> <div class="destinations__img__inside">
+    <p class="score">3.5</p>
+    <div class="inside__text-box">
+        <p class="inside__text--primary">Vietnam</p>
+        <p class="inside__text--secondary">Worefall</p>
+    </div>
+  </div></div>
+</div>
+          </article>
+        </div>
         </section>
-      </div>
     </main>
 
     <footer class="footer">
       <div class="container">
-        <div class="grid-template--4col">
-            <img src="./images/Logo.png" alt="" class="footer__logo" />
-            <p>Enjoy the touring with Salty</p>
-            <nav class="nav--footer">
-              <div class="nav--footer__block">
-                <h2 class="heading--secondary">Resources</h2>
-                <ul role="list" class="footer--list">
-                  <li class="nav--footer__item"><a href="#">Download</a></li>
-                  <li class="nav--footer__item"><a href="#">Help Center</a></li>
-                  <li class="nav--footer__item"><a href="#">Guide Book</a></li>
-                  <li class="nav--footer__item"><a href="#">App Directory</a></li>
-                </ul>
-              </div>
-              <div class="nav--footer__block">
-                <h2 class="heading--secondary">Travellers</h2>
-                <ul role="list" class=" footer--list">
-                  <li><a href="#">Why Travellers</a></li>
-                  <li><a href="#">Enterprice</a></li>
-                  <li><a href="#">Customer Stories</a></li>
-                  <li><a href="#">Company</a></li>
-                </ul>
-              </div>
-              <div class="nav--footer__block">
-                <h2 class="heading--secondary">Company</h2>
-                <ul role="list" class=" footer--list">
-                  <li><a href="#">Travelling</a></li>
-                  <li><a href="#">About Locato</a></li>
-                  <li><a href="#">Success</a></li>
-                  <li><a href="#">Information</a></li>
-                </ul>
-              </div>
-              <div class="nav--footer__block">
-                <h2 class="heading--secondary">Get app</h2>
-                <ul role="list" class=" footer--list">
-                  <li><a href="#">App Store</a></li>
-                  <li><a href="#">Google Play Store</a></li>
-                </ul>
-              </div>
-        </div>
+        <nav class="nav--footer">
+            <div class="grid-template--5col">
+                <div class="footer__text-box">
+                    <img src="./images/Logo.png" alt="" class="footer__logo" />
+                    <p class="footer__text">Enjoy the touring with Salty</p>
+                </div>
+                  <div class="nav--footer__block">
+                      <ul role="list" class="footer__list">
+                    <h2 class="heading--secondary">Resources</h2>
+                      <li class="nav--footer__item"><a href="#">Download</a></li>
+                      <li class="nav--footer__item"><a href="#">Help Center</a></li>
+                      <li class="nav--footer__item"><a href="#">Guide Book</a></li>
+                      <li class="nav--footer__item"><a href="#">App Directory</a></li>
+                    </ul>
+                  </div>
+                  <div class="nav--footer__block">
+                      <ul role="list" class=" footer__list">
+                    <h2 class="heading--secondary">Travellers</h2>
+                      <li class="nav--footer__item"><a href="#">Why Travellers</a></li>
+                      <li class="nav--footer__item"><a href="#">Enterprice</a></li>
+                      <li class="nav--footer__item"><a href="#">Customer Stories</a></li>
+                      <li class="nav--footer__item"><a href="#">Instagram post</a></li>
+
+                    </ul>
+                  </div>
+                  <div class="nav--footer__block">
+                      <ul role="list" class=" footer__list">
+                    <h2 class="heading--secondary">Company</h2>
+                      <li class="nav--footer__item"><a href="#">Travelling</a></li>
+                      <li class="nav--footer__item"><a href="#">About Locato</a></li>
+                      <li class="nav--footer__item"><a href="#">Success</a></li>
+                      <li class="nav--footer__item"><a href="#">Information</a></li>
+                    </ul>
+                  </div>
+                  <div class="nav--footer__block">
+                      <ul role="list" class=" footer__list">
+                    <h2 class="heading--secondary">Get app</h2>
+                      <li class="nav--footer__item"><a href="#">App Store</a></li>
+                      <li class="nav--footer__item"><a href="#">Google Play Store</a></li>
+                    </ul>
+                  </div>
+            </div>
         </nav>
       </div>
     </footer>
